<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wireless Clipboard</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_clip_board">ClipBoardActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="clipText4">Dummy Clip 4</string>
    <string name="clipText3">Dummy Clip 3</string>
    <string name="clipText2">Dummy Clip 2</string>
    <string name="clipText1">Dummy Clip 1</string>
    <string name="clipText0">Dummy Clip 0</string>
    <string name="title_activity_main_clipboard">MainClipboard</string>
    <string name="account_name">some account</string>
    <string name="account_secret">some secret</string>
    <string name="device_name">android device</string>
    <string name="server_address">10.0.16.220</string>
    <string name="server_port">4242</string>
    <string name="toClipboardButtonText">System Clipboard</string>
    <string name="deleteClipButtonText">Delete</string>
    <string name="toWirelessClipboardButtonText">Wireless Clip</string>
</resources>
